feat: Add markup without styles

--- a/index.html
+++ b/index.html
@@ -19,12 +19,94 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Homepage</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa
-      repellendus quidem nihil excepturi dolor alias, sunt quisquam, vitae
-      recusandae quod nemo dolores reprehenderit adipisci rerum vel. Quasi
-      temporibus at officiis?
-    </p>
+    <main>
+      <div>
+        <img
+          src="./images/christina-wocintechchat-com-ivlw4orbruc-unsplash.jpg"
+          alt="a potrait of me"
+        />
+        <span>Ashley Williams</span>
+      </div>
+      <div>
+        <h1>About me</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi
+          pariatur dolor repellendus expedita assumenda tenetur commodi
+          quibusdam cum veritatis sint porro nobis explicabo distinctio enim
+          quidem aperiam inventore perferendis deserunt unde esse sapiente,
+          consequatur eos recusandae similique. Itaque, culpa assumenda
+          exercitationem quidem perspiciatis eaque ducimus? Blanditiis repellat
+          ipsum doloremque inventore.
+        </p>
+        <div>
+          <img src="./images/github.svg" alt="" />
+          <img src="./images/linkedin.svg" alt="" />
+          <img src="./images/twitter.svg" alt="" />
+        </div>
+      </div>
+    </main>
+
+    <div>
+      <h1>My Work</h1>
+      <div>
+        <div class="project">
+          <img src="" alt="screenshot of Project" />
+          <div>
+            <h2>Project name</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore,
+              perferendis?
+            </p>
+            <div>
+              <img src="./images/github.svg" alt="" />
+              <img src="./images/open-in-new.svg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img src="" alt="screenshot of Project" />
+          <div>
+            <h2>Project name</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore,
+              perferendis?
+            </p>
+            <div>
+              <img src="./images/github.svg" alt="" />
+              <img src="./images/open-in-new.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div>
+        <h1>Contact me</h1>
+        <p>
+          Please get in touch if you think our work could be mutually
+          beneficial!
+        </p>
+        <p>1234 Random Road</p>
+        <p>Random Town, California 12345</p>
+        <div>
+          <img src="./images/phone.svg" alt="" />
+          <span>5555-5555-5555</span>
+        </div>
+        <div>
+          <img src="./images/email-outline.svg" alt="" />
+          <span>ashlewwilliams.is.not.real@gmail.com</span>
+        </div>
+        <div>
+          <img src="./images/github.svg" alt="" />
+          <img src="./images/linkedin.svg" alt="" />
+          <img src="./images/twitter.svg" alt="" />
+        </div>
+      </div>
+      <img
+        src="./images/christina-wocintechchat-com-yyp_HpXrUfw-unsplash.jpg"
+        alt="me working"
+      />
+    </footer>
   </body>
 </html>
