feat: Add mobile styles

--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
   </head>
   <body>
     <main>
-      <div>
+      <div class="profile-pic-container">
         <img
           src="./images/christina-wocintechchat-com-ivlw4orbruc-unsplash.jpg"
           alt="a potrait of me"
+          class="profile-pic"
         />
-        <span>Ashley Williams</span>
+        <h1 class="name">Ashley Williams</h1>
       </div>
       <div>
-        <h1>About me</h1>
+        <h2>About me</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi
           pariatur dolor repellendus expedita assumenda tenetur commodi
@@ -38,42 +39,130 @@
           exercitationem quidem perspiciatis eaque ducimus? Blanditiis repellat
           ipsum doloremque inventore.
         </p>
-        <div>
-          <img src="./images/github.svg" alt="" />
-          <img src="./images/linkedin.svg" alt="" />
-          <img src="./images/twitter.svg" alt="" />
+        <div class="icons">
+          <a href="https://www.github.com">
+            <img src="./images/github.svg" alt="github" />
+          </a>
+          <a href="https://www.linkedin.com"
+            ><img src="./images/linkedin.svg" alt="linkedin"
+          /></a>
+          <a href="https://www.twitter.com"
+            ><img src="./images/twitter.svg" alt="twitter"
+          /></a>
         </div>
       </div>
     </main>
 
-    <div>
-      <h1>My Work</h1>
+    <div class="work-section">
+      <h2>My Work</h2>
       <div>
         <div class="project">
-          <img src="" alt="screenshot of Project" />
-          <div>
-            <h2>Project name</h2>
+          <img
+            src="./images/christina-wocintechchat-com-ivlw4orbruc-unsplash.jpg"
+            alt="screenshot of Project"
+            class="project-image"
+          />
+          <div class="project-details">
+            <h3>Project name</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore,
               perferendis?
             </p>
-            <div>
-              <img src="./images/github.svg" alt="" />
-              <img src="./images/open-in-new.svg" alt="" />
+            <div class="icons">
+              <a href="https://www.github.com">
+                <img src="./images/github.svg" alt="github" />
+              </a>
+              <a href="https://www.linkedin.com">
+                <img src="./images/open-in-new.svg" alt="link" />
+              </a>
             </div>
           </div>
         </div>
         <div class="project">
-          <img src="" alt="screenshot of Project" />
-          <div>
-            <h2>Project name</h2>
+          <img
+            src="./images/christina-wocintechchat-com-ivlw4orbruc-unsplash.jpg"
+            alt="screenshot of Project"
+            class="project-image"
+          />
+          <div class="project-details">
+            <h3>Project name</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore,
               perferendis?
             </p>
-            <div>
-              <img src="./images/github.svg" alt="" />
-              <img src="./images/open-in-new.svg" alt="" />
+            <div class="icons">
+              <a href="https://www.github.com">
+                <img src="./images/github.svg" alt="github" />
+              </a>
+              <a href="https://www.linkedin.com">
+                <img src="./images/open-in-new.svg" alt="link" />
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img
+            src="./images/christina-wocintechchat-com-ivlw4orbruc-unsplash.jpg"
+            alt="screenshot of Project"
+            class="project-image"
+          />
+          <div class="project-details">
+            <h3>Project name</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore,
+              perferendis?
+            </p>
+            <div class="icons">
+              <a href="https://www.github.com">
+                <img src="./images/github.svg" alt="github" />
+              </a>
+              <a href="https://www.linkedin.com">
+                <img src="./images/open-in-new.svg" alt="link" />
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img
+            src="./images/christina-wocintechchat-com-ivlw4orbruc-unsplash.jpg"
+            alt="screenshot of Project"
+            class="project-image"
+          />
+          <div class="project-details">
+            <h3>Project name</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore,
+              perferendis?
+            </p>
+            <div class="icons">
+              <a href="https://www.github.com">
+                <img src="./images/github.svg" alt="github" />
+              </a>
+              <a href="https://www.linkedin.com">
+                <img src="./images/open-in-new.svg" alt="link" />
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img
+            src="./images/christina-wocintechchat-com-ivlw4orbruc-unsplash.jpg"
+            alt="screenshot of Project"
+            class="project-image"
+          />
+          <div class="project-details">
+            <h3>Project name</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore,
+              perferendis?
+            </p>
+            <div class="icons">
+              <a href="https://www.github.com">
+                <img src="./images/github.svg" alt="github" />
+              </a>
+              <a href="https://www.linkedin.com">
+                <img src="./images/open-in-new.svg" alt="link" />
+              </a>
             </div>
           </div>
         </div>
@@ -82,13 +171,15 @@
 
     <footer>
       <div>
-        <h1>Contact me</h1>
+        <h2>Contact me</h2>
         <p>
           Please get in touch if you think our work could be mutually
           beneficial!
         </p>
-        <p>1234 Random Road</p>
-        <p>Random Town, California 12345</p>
+        <p>
+          1234 Random Road <br />
+          Random Town, California 12345
+        </p>
         <div>
           <img src="./images/phone.svg" alt="" />
           <span>5555-5555-5555</span>
@@ -97,7 +188,7 @@
           <img src="./images/email-outline.svg" alt="" />
           <span>ashlewwilliams.is.not.real@gmail.com</span>
         </div>
-        <div>
+        <div class="icons">
           <img src="./images/github.svg" alt="" />
           <img src="./images/linkedin.svg" alt="" />
           <img src="./images/twitter.svg" alt="" />
