feat: Add styles

--- a/index.html
+++ b/index.html
@@ -28,16 +28,13 @@
         />
         <h1 class="name">Ashley Williams</h1>
       </div>
-      <div>
+      <div class="about-me">
         <h2>About me</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi
           pariatur dolor repellendus expedita assumenda tenetur commodi
           quibusdam cum veritatis sint porro nobis explicabo distinctio enim
           quidem aperiam inventore perferendis deserunt unde esse sapiente,
-          consequatur eos recusandae similique. Itaque, culpa assumenda
-          exercitationem quidem perspiciatis eaque ducimus? Blanditiis repellat
-          ipsum doloremque inventore.
         </p>
         <div class="icons">
           <a href="https://www.github.com">
@@ -211,9 +208,15 @@
           <span>ashlewwilliams.is.not.real@gmail.com</span>
         </div>
         <div class="icons">
-          <img src="./images/github.svg" alt="" />
-          <img src="./images/linkedin.svg" alt="" />
-          <img src="./images/twitter.svg" alt="" />
+          <a href="https://www.github.com">
+            <img src="./images/github.svg" alt="github" />
+          </a>
+          <a href="https://www.linkedin.com"
+            ><img src="./images/linkedin.svg" alt="linkedin"
+          /></a>
+          <a href="https://www.twitter.com"
+            ><img src="./images/twitter.svg" alt="twitter"
+          /></a>
         </div>
       </div>
       <img
