--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <main>
-      <div class="profile-pic-container">
+      <div class="profile-pic-container scale-up-center">
         <img
           src="./images/christina-wocintechchat-com-ivlw4orbruc-unsplash.jpg"
           alt="a potrait of me"
@@ -28,7 +28,7 @@
         />
         <h1 class="name">Ashley Williams</h1>
       </div>
-      <div class="about-me">
+      <div class="about-me slide-left">
         <h2>About me</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi
@@ -222,6 +222,8 @@
       <img
         src="./images/christina-wocintechchat-com-yyp_HpXrUfw-unsplash.jpg"
         alt="me working"
+        loading="lazy"
+        class="footer-img"
       />
     </footer>
   </body>
