feat: Add Memory Game  project

--- a/index.html
+++ b/index.html
@@ -87,6 +87,35 @@
           <picture>
             <source
               media="(prefers-color-scheme: dark)"
+              srcset="./images/memory-game-dark.png"
+            />
+            <img
+              src="./images/memory-game-light.png"
+              alt="battleship project"
+              class="project-image"
+            />
+          </picture>
+          <div class="project-details">
+            <h3>Memory Game</h3>
+            <p>
+              Challenge your memory with this interactive game based on Marvel
+              characters. Click each card only once and test your recall skills.
+              Play now for a fun and engaging experience!
+            </p>
+            <div class="icons">
+              <a href="https://github.com/shravzzv/ODIN-Memory-card-project">
+                <img src="./images/github.svg" alt="github" />
+              </a>
+              <a href="https://odin-memory-card-game.vercel.app/">
+                <img src="./images/open-in-new.svg" alt="link" />
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <picture>
+            <source
+              media="(prefers-color-scheme: dark)"
               srcset="./images/knight-travails-dark.jpeg"
             />
             <img
