feat: Update about me, and add text-shadow for name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <div class="profile-pic-container scale-up-center">
         <img
-          src="./images/profile.jpg"
+          src="./images/profile.jpeg"
           alt="a potrait of me"
           class="profile-pic"
         />
@@ -31,7 +31,7 @@
       <div class="about-me slide-left">
         <h2>About me</h2>
         <p>
-          I am a front-end web developer, deeply passionate about crafting
+          I am a full-stack web developer, deeply passionate about crafting
           visually stunning and responsive web pages and applications through
           the power of JavaScript. Striving for excellence in every line of
           code, I embark on a journey of continuous learning and creativity.
