--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           visually stunning and responsive web pages and applications through
           the power of JavaScript. Striving for excellence in every line of
           code, I embark on a journey of continuous learning and creativity.
+          <a href="resume.pdf" download>Download my resume</a>.
         </p>
         <div class="icons">
           <a href="https://github.com/shravzzv">
